1.1.0 (20.08.2012):

* Fix applying default settings to widgets in scanimage dialog
  Closes debian bug #682818 (Presets aren't working)
* Fixed bug editing OCR output.
* Add profiles to libsane-perl frontend
* Fixed switching to last directory on open/save


1.0.6 (20.07.2012):

* Fixed cropping when selector tool not active or page not selected
  Closes bug 3544597 (crop tool not working)
* Fixed renumber dialog
  Closes bug 3545151 (renumber not working in version 1.0.5)
* Fixed keyboard entry in dialog boxes
  Closes Launchpad bug 1026944 (Unable to type text in Save dialog box)
* + support for unpaper > 0.3
  Closes bug 3542615 (Incompatibility with recent releases of unpaper)
* Repage after crop
  Closes bug 3526661 (cropping page twice: coordinates off)


1.0.5 (15.07.2012):

* Allow new processes to be started after pressing cancel button
* Fixed paste menu
  Closes bug 3517797 (Copy and paste no longer work)
* Pad scans which have less data than their headers announce with blanks
  Closes bug 3480247 (No image from HP6500A ADF)
* Fix unpaper when used as part of scan process
  Closes Debian bug #670640 (Can't call method get_cmdline)
* Sort OCR languages in ComboBoxes
* Deal with non-UTF-8 output from OCR. Closes Debian bug #670831
  (gscan2pdf is not resilient against non utf-8 from tesseract)
* Fix Email to PDF with kmail
  Closes bug 3487790 (suse 12.1 emails no pdf)
* Fix updating widgets in scanimage dialog
  Closes debian bug #678911
  (Device-dependent options disappear after selecting Lineart mode)
* + Gujarati translation (thanks to Vishal Goswami)
* Update to Brazilian Portuguese translation (thanks to Arthur Rodrigues)
* Update to Simplified Chinese translation (thanks to Wang Dianjin)
* Update to Czech translation (thanks to Zbyněk Schwarz)
* Update to German translation (thanks to Dennis Baudys)
* Update to Hungarian translation (thanks to Herczeg Zsolt)
* Update to Japanese translation (thanks to Shushi Kurose)