@@ -5,6 +5,8 @@
 * Fixed bug editing OCR output.
 * Add profiles to libsane-perl frontend
 * Fixed switching to last directory on open/save
+* Fixed extracting image resolution in non-English locales
+  Closes bug 3572463 (After update suse 12.2 pdf blank page)
 
 
 1.0.6 (20.07.2012):
